# Polytope_Conjecture_Prover

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
agent/: claude_sdk.py  config.py  conjectures.py  counterexample_finding_agent.py  exceptions.py  formalizer_agent.py  orchestrator.py  procutil.py  prover_agent.py
agent/conjecture_generator/: __init__.py  __main__.py  agent.py
agent/hopper_ce_finder/: agent.py
agent/llm_ce_finder/: agent.py
agent/orchestrator/: __main__.py  evolution_loop.py  orchestrator.py
agent/plantri_ce_finder/: agent.py
agent/prompts/: blueprint_decompose.py  goal_extraction.py  lean_generation.py
agent/prover/: agent.py
agent/rl_ce_finder/: agent.py
agent/tools/: blueprint.py  check_pvector.py  conjecture_parser.py  formalization_logger.py  goal_lock.py  lean_compiler.py  llm_hint_generator.py  output_search.py  polib_manager.py  polytope_constructor.py  prompt_optimizer.py  prove_conjectures.py  quality_checker.py  search.py
conjectures/: conjectures.json  registry.json
conjectures/individual/: C10.tex  C11.tex  C12.tex  C13.tex  C14.tex  C15.tex  C16.tex  C17.tex  C18.tex  C19.tex  C2.tex  C20.tex  C21.tex  C22.tex  C23.tex  C24.tex  C25.tex  C28.tex  C3.tex  C30.tex  C31.tex  C32.tex  C33.tex  C34.tex  C35.tex  C36.tex  C4.tex  C40.tex  C5.tex  C50.tex  C51.tex  C53.tex  C6.tex  C67.tex  C7.tex  C8.tex  C9.tex
output/: lakefile.lean  plantri_verdicts_C2.json  realizability_cache.json
output/conjecture_proof/: C10.lean  (+29 more)
polib/: Inventory.lean  Polib.lean  lakefile.lean
tools/: draw_ce_witness.py
(+83 files in other folders)
